# funkyduck

./: Cargo.toml  README.md  build.rs  flake.nix  openapi.json
src/: main.rs
ui/: app-window.slint
