[package]
name = "funkyduck"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8.19" }
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"
serde_json = "1.0.113"
directories = "5.0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
slint = "1.8.0"
rand = "0.8.5"
md-5 = "0.10.6"
async-compat = "0.2.4"

[build-dependencies]
slint-build = "1.8.0"
